// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBox renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-1.emotion-1 {
  display: block;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.emotion-6.emotion-6 {
  margin-right: 4px;
}

.emotion-6:hover .emotion-8,
.emotion-6:focus .emotion-8 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.emotion-6:hover .emotion-8>.emotion-11,
.emotion-6:focus .emotion-8>.emotion-11 {
  fill: #4f0599;
}

.emotion-9 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-13 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-13.emotion-13 {
  vertical-align: middle;
}

.emotion-16 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-16.emotion-16 {
  color: #151a2d;
}

.emotion-18 {
  position: absolute;
  opacity: 0.01;
}

.emotion-20.emotion-20 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <label
        class="emotion-5 emotion-6 emotion-2"
        for="radio-choice"
      >
        <div
          class="emotion-8 emotion-9 emotion-2"
        >
          <svg
            class="emotion-11 emotion-12 emotion-13 emotion-2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-15 emotion-16 emotion-2"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          class="emotion-18 emotion-19"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-20 emotion-2"
      />
    </div>
    <div>
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when checked 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.emotion-1.emotion-1 {
  display: block;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
}

.emotion-6.emotion-6 {
  margin-right: 4px;
}

.emotion-6:hover .emotion-8,
.emotion-6:focus .emotion-8 {
  background-color: rgba(220,225,235,0.25);
  border-radius: 50%;
}

.emotion-6:hover .emotion-8>.emotion-11,
.emotion-6:focus .emotion-8>.emotion-11 {
  fill: #4f0599;
}

.emotion-9 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-13 {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-13.emotion-13 {
  vertical-align: middle;
}

.emotion-16 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-16.emotion-16 {
  color: #151a2d;
}

.emotion-18 {
  position: absolute;
  opacity: 0.01;
}

.emotion-20.emotion-20 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
  >
    <div
      class="emotion-3 emotion-2"
    >
      <label
        class="emotion-5 emotion-6 emotion-2"
        for="radio-choice"
      >
        <div
          class="emotion-8 emotion-9 emotion-2"
        >
          <svg
            class="emotion-11 emotion-12 emotion-13 emotion-2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
            />
          </svg>
        </div>
        <div
          class="emotion-15 emotion-16 emotion-2"
        >
          Choice
        </div>
        <input
          aria-checked="true"
          checked=""
          class="emotion-18 emotion-19"
          id="radio-choice"
          name="radio"
          tabindex="0"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-20 emotion-2"
      />
    </div>
    <div>
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.emotion-1.emotion-1 {
  display: block;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.emotion-6.emotion-6 {
  margin-right: 4px;
}

.emotion-9 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-13 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-13.emotion-13 {
  vertical-align: middle;
}

.emotion-16 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-16.emotion-16 {
  color: #151a2d;
}

.emotion-18 {
  position: absolute;
  opacity: 0.01;
}

.emotion-20.emotion-20 {
  margin-right: 8px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
    disabled=""
  >
    <div
      class="emotion-3 emotion-2"
    >
      <label
        class="emotion-5 emotion-6 emotion-2"
        disabled=""
        for="radio-choice"
      >
        <div
          class="emotion-8 emotion-9 emotion-2"
        >
          <svg
            class="emotion-11 emotion-12 emotion-13 emotion-2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-15 emotion-16 emotion-2"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          aria-disabled="true"
          class="emotion-18 emotion-19"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-20 emotion-2"
      />
    </div>
    <div>
      Choice description
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioBorderedBox renders correctly with label desc and badge 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  cursor: not-allowed!important;
  color: #dce1eb;
}

.emotion-1.emotion-1 {
  display: block;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-3.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  height: 32px;
  cursor: pointer;
  color: #dce1eb;
  cursor: not-allowed;
}

.emotion-6.emotion-6 {
  margin-right: 4px;
}

.emotion-9 {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.emotion-13 {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-13.emotion-13 {
  vertical-align: middle;
}

.emotion-16 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
}

.emotion-16.emotion-16 {
  color: #151a2d;
}

.emotion-18 {
  position: absolute;
  opacity: 0.01;
}

.emotion-20.emotion-20 {
  margin-right: 8px;
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #ef5774;
  color: #fff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<label
    class="emotion-0 emotion-1 emotion-2"
    disabled=""
  >
    <div
      class="emotion-3 emotion-2"
    >
      <label
        class="emotion-5 emotion-6 emotion-2"
        disabled=""
        for="radio-choice"
      >
        <div
          class="emotion-8 emotion-9 emotion-2"
        >
          <svg
            class="emotion-11 emotion-12 emotion-13 emotion-2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
            />
          </svg>
        </div>
        <div
          class="emotion-15 emotion-16 emotion-2"
        >
          Choice
        </div>
        <input
          aria-checked="false"
          aria-disabled="true"
          class="emotion-18 emotion-19"
          disabled=""
          id="radio-choice"
          name="radio"
          style="pointer-events: none;"
          type="radio"
          value="choice"
        />
      </label>
      <span
        class="emotion-20 emotion-2"
      >
        (something)
      </span>
      <span
        class="emotion-22 emotion-23 emotion-2"
      >
        Badge
      </span>
    </div>
    <div>
      Choice description
    </div>
  </label>
</DocumentFragment>
`;
